# lambda-shell

./: .gitignore  CHANGELOG.md  LambdaShell.cabal  Makefile  README  cabal.project  cabal.project-9.10.1  cabal.project-9.2.8-asr  prelude.lam
.github/workflows/: xxx.yml
src/: CPS.hs  Env.hs  Lambda.hs  LambdaCmdLine.hs  LambdaParser.hs  LambdaShell.hs
