cabal-version:   3.0
Name:            LambdaShell
Build-Type:	 Simple
Version:         0.9.9
License:         GPL-2.0-only
License-file:    LICENSE
Author:          Robert Dockins
Maintainer:      robdockins AT fastmail DOT fm
Stability:       Beta
Category:        Compilers/Interpreters
Synopsis:        Simple shell for evaluating lambda expressions
Homepage:        http://rwd.rdockins.name/lambda/home/
Description:
  The lambda shell is a feature-rich shell environment and command-line tool for
  evaluating terms of the pure, untyped lambda calculus.  The Lambda
  Shell builds on the shell creation framework Shellac, and showcases
  most of Shellac's features.
tested-with:     GHC == 9.10.1

Executable lambdaShell
  Main-Is: main.hs
  Hs-Source-Dirs: src
  Other-Modules:
     CPS
     Env
     Lambda
     LambdaCmdLine
     LambdaParser
     LambdaShell
     Version
     Paths_LambdaShell
  GHC-Options: -W
  Default-Extensions:
     MultiParamTypeClasses
  Default-Language: Haskell2010
  Build-Depends:
     base == 4.*,
     parsec, mtl,
     Shellac >= 0.9.9,
     Shellac-readline,
     containers
